# python-project-51

./: .flake8  Makefile  README.md  page_loader.py  pyproject.toml  ru-hexlet-io-courses.html
.github/workflows/: github-actions.yml
page_loader/: app.py  html_download.py  img_download.py  mat_download.py  support_func.py
project/: __init__.py  app.py  page_loader.py
tests/: test_img_downloader.py  test_page_loader.py  tests_page_loader.py
tests/fixtures/: download.html  img_download.html  test_download_explain.txt
