[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nik Sizov <wwwwwwwww@list.ru>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
