[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nik Sizov <wwwwwwwww@list.ru>"]
readme = "README.md"
packages = [{include = "page_loader"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
mock = "^4.0.3"
requests-mock = "^1.10.0"

[tool.poetry.scripts]
page-loader = "page_loader.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
